<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DAMA</string>
    <string name="FirstPlayer">First Player Name:</string>
    <string name="SecondPlayer">Second Player Name:</string>
    <string name="action_settings">Settings</string>
    <string name="registration">Add Players</string>
    <string name="play_game">Play</string>
    <string name="ranking">Show Ranking</string>
    <string name="enter_username">Enter username</string>
    <string name="Player_one">Enter Player 1</string>
    <string name="Player_two">Enter Player 2</string>
    <string name="resing_button_text">Resign from game</string>
    <string name="first_player_name">%1$s   vs   %2$s</string>    
    <string name="animation_winner">Winner is %1$s</string>
    <string name="Ranking">Ranking List</string>  
 	<string name="WinnerImage"> win image</string>
</resources>
