<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/Login_linearlayout_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/first_player_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstPlayer"
        />
    
    <EditText 
        android:id="@+id/first_player_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Player_one"
        />
    
     <TextView
        android:id="@+id/second_player_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SecondPlayer" 
        />
     
    <EditText 
        android:id="@+id/second_player_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Player_two"
        />
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
         android:drawableLeft="@drawable/save"
        android:text="@string/registration"/>
    
     <Button
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:text="@string/play_game"
         android:drawableLeft="@drawable/play"
        />
     
     
     <Button
        android:id="@+id/increase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
         android:drawableLeft="@drawable/register"
        android:text="@string/ranking"
        />
     


</LinearLayout>
