<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    
 	<TextView 
		 android:id = "@+id/textview_firstusername"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
    	 android:textSize = "17sp"
         android:text = "@string/Player_one"
    />
 	<EditText 
     	 android:id = "@+id/edittext_firstusername"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:inputType="text"
         android:text ="@string/enter_username"
     />
 	<TextView 
		 android:id = "@+id/textview_secondusername"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
    	 android:textSize = "17sp"
         android:text = "@string/Player_two"
    />
 	<EditText 
     	 android:id = "@+id/edittext_secondusername"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:inputType="text"
         android:text = "@string/enter_username"
     />
 	<Button 
 	    android:id = "@+id/button_playgame"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:text = "@string/play_game"
 	    />
 	<Button 
 	    android:id = "@+id/button_ranking"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:text = "@string/ranking"
 	    />
 	<Button 
 	    android:id = "@+id/button_register"
		 android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:text = "@string/registration"
 	    />
   
</LinearLayout>
